# MotionScore

./: .gitignore  README.md  dev_requirements.txt  export.csv  full_test_review.csv  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py  brainscore.py  config.py  db.py  schema.sql  utils.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/auth/: login.html
flaskr/templates/brainscore/: index.html
motscore/: __init__.py  auth.py  db.py  motionscore.py  utils.py
motscore/rand_bids/: explorer.py  sampler.py
motscore/templates/: base.html
motscore/templates/auth/: login.html
motscore/templates/motionscore/: index.html
rand_bids/: explorer.py  sampler.py
tests/: config.py  conftest.py  test.sqlite  test_auth.py  test_cli.py  test_db.py  test_motionscore.py  test_utils.py
tests/rand_bids/: test_explorer.py  test_sampler.py
tests/tmp_out/: out.csv
