[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainscore"
version = "2024.0.0"
dependencies = [
  "flask>=3.0.3",
]
requires-python = ">=3.11"
authors = [
    {name = "Bricout Charles", email = "bricout.charles@outlook.com"}
]
maintainers = [
  {name = "Bricout Charles", email = "bricout.charles@outlook.com"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"


[tool.pytest.ini_options]
pythonpath = ["."]

