
[project]
name = "brainscore"
version = "2024.0.0"
dependencies = [
  "flask>=3.0.3",
  "numpy>=2.2.1",
  "nibabel>=5.3.2",
  "SimpleITK>=2.4.0",
  "pybids>=0.18.1",
  "click>=8.1.8",
  "matplotlib>=3.10.0",
  "pandas>=2.2.3",
  "pillow>=11.0.0",
  "seaborn>=0.13.2",
  "Werkzeug>=3.1.3"
]
requires-python = ">=3.11"
authors = [
    {name = "Bricout Charles", email = "bricout.charles@outlook.com"}
]
maintainers = [
  {name = "Bricout Charles", email = "bricout.charles@outlook.com"}
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = ["."]

